SC-73291: fix contrast issues (#853)
* SC-73291: fix contrast issues

* SC-73291: build tailwind

---------

--- a/assets/scss/components/_avatar.scss
+++ b/assets/scss/components/_avatar.scss
@@ -118,7 +118,7 @@ $avatarBg: $C_coolGrayLight;
 
 .avatar--noPhoto {
 	align-items: center;
-	background-color: darken($avatarBg, 6%);
+	background-color: darken($avatarBg, 40%);
 	display: inline-flex;
 	justify-content: center;
 	position: relative;
